Corrected the watch bytton in detail page alignment

--- a/src/css/Detail.css
+++ b/src/css/Detail.css
@@ -32,7 +32,7 @@
 .watch-button{
     border:none;
     height:7vh;
-    width: 10vw;
+    width: 13vw;
     font-size:10px;
     color: black;
     background-color:orange;
